[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["AhmadShalein <ahmadshalein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.4"
pandas = "^1.3.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
